# compact

./: .envrc  .gitignore  CHANGELOG.md  CHANGELOG_compactc.md  CODEOWNERS  Cargo.toml  DASHBOARD.md  SECURITY.md  compiler.md  dist-workspace.toml  flake.nix
.github/: dependabot.yml
coips/: README.md  coip-0001.md  coip-0002.md  coip-XXXX.md  coip-template.md  coip-xxxx-modularity.md  coip-xxxx.md
compiler/: README-rust-passes.md  analysis-passes.ss  circuit-passes.ss  compact-reference-proto.mdx  compactc.ss  compiler-version.ss  config-params.ss  desugar-contract-calls.ss  events.ss  export-keywords.ss  field.ss  fixup-compact.ss  fixup.ss  format-compact.ss  formatter-test.ss  formatter.ss  frontend-passes.ss  inlines.ss  json.ss  lang-ref-proto.mdx  langs.ss  language-version.ss  ledger-version.ss  ledger.ss  lexer.ss  lparser-to-lsrc.ss  lparser.ss  manifest-passes.ss  midnight-events.ss  midnight-inlines.ss  midnight-ledger.ss  midnight-natives.ss  natives.ss  parser.ss  pass-helpers.ss  passes.ss  rust-passes-decls.ss  rust-passes-emit.ss  rust-passes-helpers.ss  rust-passes-prelude.ss  (+18 more)
debug-test/: .prettierignore  package.json
doc/: Compact.html  compact-grammar.mdx  compact-keywords.mdx  compact-reference.mdx  compiler-usage.md  compiler-usage.mdx  custom-code.css  dev-builds.md  dev-tool-usage.md  dev-tool-usage.mdx  explicit-disclosure.mdx  fixup-usage.md  fixup-usage.mdx  formatter-usage.md  formatter-usage.mdx  lang-ref.mdx  ledger-adt.mdx  midnight-ledger.html  writing.mdx  (+1 more)
runtime-rs-macros/: Cargo.toml  README.md
runtime-rs-macros/src/: lib.rs
runtime-rs-macros/tests/: witnesses_attr.rs
spike/: .gitignore  Cargo.toml
spike/counter-contract/: Cargo.toml
spike/counter-contract/src/: lib.rs
spike/runtime-rs/: Cargo.toml
spike/runtime-rs/src/: context.rs  lib.rs  version.rs  witness.rs
tests-e2e-rust/: Cargo.toml  README.md
tests-e2e-rust/contracts/aliases-fixture/: Cargo.toml  lib.rs
tests-e2e-rust/contracts/bounded-uint-fixture/: Cargo.toml  lib.rs
tests-e2e-rust/contracts/cross-circuit-fixture/: Cargo.toml  lib.rs
tests-e2e-rust/contracts/election/: Cargo.toml  lib.rs
tests-e2e-rust/contracts/fold-fixture/: Cargo.toml  lib.rs
tests-e2e-rust/contracts/for-iter-fixture/: Cargo.toml  lib.rs
tests-e2e-rust/contracts/for-range-fixture/: Cargo.toml  lib.rs
tests-e2e-rust/contracts/hash-to-curve-fixture/: Cargo.toml  lib.rs
tests-e2e-rust/contracts/if-stmt-fixture/: Cargo.toml  lib.rs
tests-e2e-rust/contracts/list-fixture/: Cargo.toml  lib.rs
tests-e2e-rust/contracts/map-fixture/: Cargo.toml  lib.rs
tests-e2e-rust/contracts/map-fn-fixture/: Cargo.toml  lib.rs
tests-e2e-rust/contracts/map-lambda-fixture/: Cargo.toml  lib.rs
tests-e2e-rust/contracts/module-fixture/: Cargo.toml  lib.rs
tests-e2e-rust/contracts/multi-pl-call-fixture/: Cargo.toml  lib.rs
tests-e2e-rust/contracts/nested-map-fixture/: Cargo.toml  lib.rs
tests-e2e-rust/contracts/pure-circuit-fixture/: Cargo.toml  lib.rs
tests-e2e-rust/contracts/sealed-ledger-fixture/: Cargo.toml  lib.rs
tests-e2e-rust/contracts/set-fixture/: Cargo.toml  lib.rs
tests-e2e-rust/contracts/tiny/: Cargo.toml  lib.rs
tests-e2e-rust/contracts/uints-fixture/: Cargo.toml  lib.rs
tests-e2e-rust/contracts/vector-fixture/: Cargo.toml  lib.rs
tests-e2e-rust/contracts/witnesses-fixture/: Cargo.toml  lib.rs
tests-e2e-rust/contracts/zerocash/: Cargo.toml  lib.rs
tests-e2e-rust/fixtures/: aliases-fixture-ts-state.json  bounded-uint-fixture-ts-state.json  capture-aliases-fixture.mjs  capture-bounded-uint-fixture.mjs  capture-cross-circuit-fixture.mjs  capture-election.mjs  capture-fold-fixture.mjs  capture-for-iter-fixture.mjs  capture-for-range-fixture.mjs  capture-hash-to-curve-fixture.mjs  capture-if-stmt-fixture.mjs  capture-list-fixture.mjs  capture-map-fixture.mjs  capture-map-fn-fixture.mjs  capture-map-lambda-fixture.mjs  capture-module-fixture.mjs  capture-nested-map-fixture.mjs  capture-pure-circuit-fixture.mjs  capture-sealed-ledger-fixture.mjs  capture-set-fixture.mjs  capture-tiny.mjs  capture-uints-fixture.mjs  capture-vector-fixture.mjs  capture-witnesses-fixture.mjs  capture-zerocash.mjs  counter-ts-state.json  cross-circuit-fixture-ts-state.json  election-ts-state.json  fold-fixture-ts-state.json  for-iter-fixture-ts-state.json  for-range-fixture-ts-state.json  hash-to-curve-fixture-ts-state.json  if-stmt-fixture-ts-state.json  list-fixture-ts-state.json  map-fixture-ts-state.json  map-fn-fixture-ts-state.json  map-lambda-fixture-ts-state.json  module-fixture-ts-state.json  nested-map-fixture-ts-state.json  pure-circuit-fixture-ts-state.json  (+7 more)
tests-e2e-rust/src/: common.rs  election.rs  lib.rs  map_fixture.rs  tiny.rs  zerocash.rs
tests-e2e-rust/tests/: aliases_fixture.rs  bounded_uint_fixture.rs  codegen_regression.rs  counter.rs  cross_circuit_fixture.rs  election.rs  fold_fixture.rs  for_iter_fixture.rs  for_range_fixture.rs  hash_to_curve_fixture.rs  if_stmt_fixture.rs  list_fixture.rs  map_fixture.rs  map_fn_fixture.rs  map_lambda_fixture.rs  module_fixture.rs  nested_map_fixture.rs  pure_circuit_fixture.rs  sealed_ledger_fixture.rs  set_fixture.rs  tiny.rs  uints_fixture.rs  vector_fixture.rs  witness_leak_check.rs  witnesses_fixture.rs  zerocash.rs
tools/compact/: CHANGELOG.md  Cargo.toml  README.md
tools/compact/contract/formatter/output/: example_3.compact
tools/compact/output/compile/: compact_help.txt  std_non_latest.txt
tools/compact/output/fixup/: std_fixup_verbose_one_file.txt
tools/compact/output/help/: std_default.txt  std_default_env.txt  std_short.txt
tools/compact/output/list/: std_default.txt  std_latest_selected.txt  std_oldest_selected.txt  std_previous_selected.txt
tools/compact/src/: command_line_arguments.rs  compact_directory.rs  compiler.rs  compiler_legacy.rs  console.rs  fetch.rs  file.rs  http.rs  lib.rs  progress.rs  utils.rs
tools/compact/tests/: test_compile.rs  test_list.rs  test_scenarios.rs  test_scenarios_four.rs  test_scenarios_two.rs  test_self_scenarios.rs
tools/compact/tests/common/: mod.rs
(+704 files in other folders)
