# This file is part of Compact.
# Copyright (C) 2025 Midnight Foundation
# SPDX-License-Identifier: Apache-2.0
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# 	http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[workspace]
resolver = "3"
members = [
    "tools/*",
    "runtime-rs",
    "runtime-rs-macros",
    "tests-e2e-rust",
    "tests-e2e-rust/contracts/tiny",
    "tests-e2e-rust/contracts/zerocash",
    "tests-e2e-rust/contracts/election",
    "tests-e2e-rust/contracts/map-fixture",
    "tests-e2e-rust/contracts/uints-fixture",
    "tests-e2e-rust/contracts/vector-fixture",
    "tests-e2e-rust/contracts/aliases-fixture",
    "tests-e2e-rust/contracts/witnesses-fixture",
    "tests-e2e-rust/contracts/if-stmt-fixture",
    "tests-e2e-rust/contracts/cross-circuit-fixture",
    "tests-e2e-rust/contracts/set-fixture",
    "tests-e2e-rust/contracts/list-fixture",
    "tests-e2e-rust/contracts/for-range-fixture",
    "tests-e2e-rust/contracts/for-iter-fixture",
    "tests-e2e-rust/contracts/fold-fixture",
    "tests-e2e-rust/contracts/map-fn-fixture",
    "tests-e2e-rust/contracts/module-fixture",
    "tests-e2e-rust/contracts/bounded-uint-fixture",
    "tests-e2e-rust/contracts/sealed-ledger-fixture",
    "tests-e2e-rust/contracts/pure-circuit-fixture",
]

[workspace.dependencies]
# Pinned to the same midnight-ledger line the TS runtime uses (ledger-8.0.2 per flake.nix).
midnight-base-crypto      = "1"
midnight-transient-crypto = "2"
midnight-serialize        = "1"
midnight-storage          = "2"
midnight-coin-structure   = "2"
midnight-onchain-state    = "3"
midnight-onchain-vm       = "3"
midnight-onchain-runtime  = "3"
midnight-zswap            = "8"

[workspace.package]
version = "0.5.1"
authors = ["Midnight Foundation"]
edition = "2024"
rust-version = "1.88.0"
description = "Manages multiple versions of the compact toolchain"
homepage = "https://docs.midnight.network"
repository = "https://github.com/midnightntwrk/compact"
license = "Apache-2.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
