[workspace]
resolver = "2"
members = ["runtime-rs", "counter-contract"]

[workspace.package]
edition = "2021"
license = "Apache-2.0"

# Pin Midnight crates to the same ledger-8.0.2 line used by the TS runtime path
# (see flake.nix `inputs.zkir.url = "github:midnightntwrk/midnight-ledger/ledger-8.0.2"`).
# Versions are the latest published on crates.io within that line.
[workspace.dependencies]
midnight-base-crypto      = "1"
midnight-transient-crypto = "2"
midnight-serialize        = "1"
midnight-storage          = "2"
midnight-coin-structure   = "2"
midnight-onchain-state    = "3"
midnight-onchain-vm       = "3"
midnight-onchain-runtime  = "3"
midnight-zswap            = "8"
