[package]
name        = "tests-e2e-rust"
version     = "0.1.0"
edition     = "2021"
license     = "Apache-2.0"
publish     = false
description = "Cross-language byte-parity tests for compactc --rust output."

[lib]
path = "src/lib.rs"

[dependencies]
compact-runtime = { path = "../runtime-rs" }
midnight-base-crypto      = { workspace = true }
midnight-onchain-state    = { workspace = true }
midnight-onchain-vm       = { workspace = true }
midnight-onchain-runtime  = { workspace = true }
midnight-coin-structure   = { workspace = true }
midnight-storage          = { workspace = true }
midnight-serialize        = { workspace = true }
serde       = { version = "1",   features = ["derive"] }
serde_json  = "1"
hex         = "0.4"

[dev-dependencies]
compact-contract-tiny = { path = "contracts/tiny" }
compact-contract-zerocash = { path = "contracts/zerocash" }
compact-contract-election = { path = "contracts/election" }
compact-contract-map-fixture = { path = "contracts/map-fixture" }
compact-contract-uints-fixture = { path = "contracts/uints-fixture" }
compact-contract-vector-fixture = { path = "contracts/vector-fixture" }
compact-contract-aliases-fixture = { path = "contracts/aliases-fixture" }
compact-contract-witnesses-fixture = { path = "contracts/witnesses-fixture" }
compact-contract-if-stmt-fixture = { path = "contracts/if-stmt-fixture" }
