# This file is part of Compact.
# Copyright (C) 2026 Midnight Foundation
# SPDX-License-Identifier: Apache-2.0
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#  	http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name        = "tests-e2e-rust"
version     = "0.1.0"
edition     = "2021"
license     = "Apache-2.0"
publish     = false
description = "Cross-language byte-parity tests for compactc --rust output."

[lib]
path = "src/lib.rs"

[dependencies]
compact-runtime = { path = "../runtime-rs" }
midnight-base-crypto      = { workspace = true }
midnight-onchain-state    = { workspace = true }
midnight-onchain-vm       = { workspace = true }
midnight-onchain-runtime  = { workspace = true }
midnight-coin-structure   = { workspace = true }
midnight-storage          = { workspace = true }
midnight-serialize        = { workspace = true }
midnight-transient-crypto = { workspace = true }
serde       = { version = "1",   features = ["derive"] }
serde_json  = "1"
hex         = "0.4"

[dev-dependencies]
compact-contract-tiny = { path = "contracts/tiny" }
compact-contract-zerocash = { path = "contracts/zerocash" }
compact-contract-election = { path = "contracts/election" }
compact-contract-map-fixture = { path = "contracts/map-fixture" }
compact-contract-uints-fixture = { path = "contracts/uints-fixture" }
compact-contract-vector-fixture = { path = "contracts/vector-fixture" }
compact-contract-aliases-fixture = { path = "contracts/aliases-fixture" }
compact-contract-witnesses-fixture = { path = "contracts/witnesses-fixture" }
compact-contract-if-stmt-fixture = { path = "contracts/if-stmt-fixture" }
compact-contract-cross-circuit-fixture = { path = "contracts/cross-circuit-fixture" }
compact-contract-set-fixture = { path = "contracts/set-fixture" }
compact-contract-list-fixture = { path = "contracts/list-fixture" }
compact-contract-for-range-fixture = { path = "contracts/for-range-fixture" }
compact-contract-for-iter-fixture = { path = "contracts/for-iter-fixture" }
compact-contract-fold-fixture = { path = "contracts/fold-fixture" }
compact-contract-bounded-uint-fixture = { path = "contracts/bounded-uint-fixture" }
compact-contract-sealed-ledger-fixture = { path = "contracts/sealed-ledger-fixture" }
