# This file is part of Compact.
# Copyright (C) 2026 Midnight Foundation
# SPDX-License-Identifier: Apache-2.0
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#  	http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "compact-runtime"
version = "0.1.0-spike"
edition.workspace = true
license.workspace = true
description = "Spike: native Rust facade matching @midnight-ntwrk/compact-runtime. NOT for production."

[dependencies]
midnight-base-crypto      = { workspace = true }
midnight-transient-crypto = { workspace = true }
midnight-onchain-state    = { workspace = true }
midnight-onchain-vm       = { workspace = true }
midnight-onchain-runtime  = { workspace = true }
midnight-coin-structure   = { workspace = true }
midnight-zswap            = { workspace = true }
midnight-serialize        = { workspace = true }
midnight-storage          = { workspace = true }
