[package]
name = "compact-contract-election"
version = "0.1.0"
edition = "2021"
publish = false
description = "Generated Rust crate for examples/election.compact, used by tests-e2e-rust byte-parity tests."

[lib]
name = "compact_contract_election"
path = "lib.rs"

[dependencies]
compact-runtime = { path = "../../../runtime-rs" }
