[package]
name = "compact-contract-fold-fixture"
version = "0.1.0"
edition = "2021"
publish = false
description = "Generated Rust crate for examples/fold_fixture.compact, used by tests-e2e-rust byte-parity tests."

[lib]
name = "compact_contract_fold_fixture"
path = "lib.rs"

[dependencies]
compact-runtime = { path = "../../../runtime-rs" }
