[package]
name = "compact-contract-map-fixture"
version = "0.1.0"
edition = "2021"
publish = false
description = "Generated Rust crate for examples/map_fixture.compact, used by tests-e2e-rust byte-parity tests."

[lib]
name = "compact_contract_map_fixture"
path = "lib.rs"

[dependencies]
compact-runtime = { path = "../../../runtime-rs" }
