[package]
name = "compact-contract-tiny"
version = "0.1.0"
edition = "2021"
publish = false
description = "Generated Rust crate for examples/tiny.compact, used by tests-e2e-rust byte-parity tests."

[lib]
name = "compact_contract_tiny"
path = "lib.rs"

[dependencies]
compact-runtime = { path = "../../../runtime-rs" }
