[package]
name = "compact-contract-zerocash"
version = "0.1.0"
edition = "2021"
publish = false
description = "Generated Rust crate for examples/zerocash.compact, used by tests-e2e-rust byte-parity tests."

[lib]
name = "compact_contract_zerocash"
path = "lib.rs"

[dependencies]
compact-runtime = { path = "../../../runtime-rs" }
